# Meeting-Identity-Engine

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml
app/api/: main.py
app/core/: confidence.py  config.py  elimination.py  fusion.py  ledger.py  registry.py  screenshare_context.py  transcript_engine.py
app/models/: schemas.py
