[project]
name = "sherlock-identity-engine"
version = "0.1.0"
description = "Real-time interview candidate identification for Sherlock's fraud-detection pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "httpx",
    "rapidfuzz",
]